Added 'on' section in Github actons file

--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,5 +1,11 @@
 name: Perform Mixeway Scan
 
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs: 
   mixeway-scan: 
     name: Mixeway Scanning 
